# turbohex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
examples/wasm-decoder-c/: build.sh  decoder.c
examples/wasm-decoder-http/: Cargo.toml  build.sh
examples/wasm-decoder-http/src/: lib.rs
examples/wasm-decoder-protobuf/: Cargo.toml
examples/wasm-decoder-protobuf/src/: lib.rs
examples/wasm-decoder-rust/: Cargo.toml  build.sh
examples/wasm-decoder-rust/src/: lib.rs
src/: app.rs  decode.rs  decoder_lua.rs  decoder_wasm.rs  file_buffer.rs  hex_view.rs  main.rs  skills.md  ui.rs
src/app/: input.rs  mod.rs  search.rs  selection.rs  types.rs
src/decode/: bits.rs  builtin.rs  lua.rs  mod.rs  stats.rs  types.rs
src/decode/wasm/: json.rs  mod.rs
src/ui/: decode_panel.rs  helpers.rs  mod.rs  popups.rs  stats_panel.rs  status_bar.rs
testdata/: sample.json
