[package]
name = "turbohex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
memmap2 = "0.9.10"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
ratatui = "0.30.0"
wasmtime = { version = "43.0.0", features = ["cranelift", "runtime"] }
