[package]
name = "turbohex"
version = "0.1.0"
edition = "2024"
description = "Interactive terminal hex-viewer with plugin-based decoders"
readme = "README.md"
repository = "https://github.com/nmbr7/turbohex"
homepage = "https://github.com/nmbr7/turbohex"
documentation = "https://docs.rs/turbohex"
license = "MIT"
keywords = ["hexviewer", "tui", "binary", "wasm", "cli"]
categories = [
  "command-line-utilities",
  "development-tools::debugging",
  "visualization",
  "encoding",
  "wasm",
]


[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
memmap2 = "0.9.10"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
ratatui = "0.30.0"
wasmtime = { version = "43.0.0", features = ["cranelift", "runtime"] }
